added author price

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -76,7 +76,7 @@
                     {% else %}
                         <div class="row">
                             <div class="col">
-                                <strong>Стоимость:</strong> {{subject.price.regular}} руб.
+                                <strong>Стоимость:</strong> {{subject.author_price}} руб.
                             </div>
                         </div>
                     {% endif %}
