--- a/templates/workshop/create_new_subject.html
+++ b/templates/workshop/create_new_subject.html
@@ -27,7 +27,7 @@
                
             </div>
 
-        <div class="form-row mt-4">
+        <div class="form-row mt-3">
             <div class="col-3">
                     <label for="prerequisite">Необходимая подготовка</label>
                 </div>
@@ -36,7 +36,7 @@
                 </div>
         </div>
 
-            <div class="form-row mt-4">
+            <div class="form-row mt-3">
                 <div class="col-3">
                 <label for="thumbnail_file">Картинка</label>
             </div>
@@ -62,7 +62,7 @@
             </div>
             </div>
 
-            <div class="form-row mt-4">
+            <div class="form-row mt-3">
                 <div class="col-3">
                 <label for="language">Язык</label>
                 </div>
@@ -74,6 +74,26 @@
                 </select>
             </div>
             </div> 
+
+            <div class="form-row mt-3">
+                <div class="col-3">
+                    <label for="author_price">Стоимость,руб.</label>
+                </div>
+                <div class="col">
+                    <input type="number" class='form-control' id="author_price" name="author_price" maxlength='10' required><br>
+                </div>
+            </div>
+
+            <div class="form-row mt-2">
+                <div class="col-3 pl-5">
+                    <input type="checkbox" id='discount_program' class='form-check-input' name='discount_program' value='discount_program' checked>
+                </div>
+                <div class="col-9">
+                    <label for="discount_program">
+                        <strong>Я согласен участвовать в дисконтных программах ruversity.com</strong>
+                    </label>
+                </div>
+            </div>
               
             <div class="row mt-4">
                 <div class="col-3"></div>
