--- a/templates/subject_page.html
+++ b/templates/subject_page.html
@@ -74,6 +74,7 @@
             </div>
             </div>
         <div class="row"><div class="col"><strong>Длительность: </strong>{{subject.length}} мин. </div></div>
+
         <div class="row">
             {% if subject.discount_programs == True and discount_time.discount_on == True %}
             <div class="row">
@@ -84,7 +85,7 @@
             {% else %}
             <div class="row">
                 <div class="col">
-                    <strong>Стоимость:</strong> {{subject.price.regular}} руб.
+                    <strong>Стоимость:</strong> {{subject.author_price}} руб.
                 </div>
             </div>
             {% endif %}
