edited author price

--- a/templates/workshop/agreement.html
+++ b/templates/workshop/agreement.html
@@ -124,13 +124,15 @@
             необходимые и достаточные докуазательства своей позиции.
         </p>
         <h5>5. Стоимость и оплата.</h5>
-        <p>Ruversity.com самостоятельно определяет ценовую политику.</p>
-        <p>Базовая цена курса устанавливается в размере 1490 руб.</p>
+        <p>Рекоммендованная Розничная Цена курса составляет 1490 руб.</p>
+        <p>Преподаватель самостоятельно устанавливаем цену для своего курса.</p>
+        <p>Если Преподаватель соглашается принимать участие в дисконтных программах ruversity.com, администрация сайта имеет право изменять цену курса на время проведения дисконтной акции. Продолжительность дисконтных акций не может превышать 10 дней в месяц.</p>
+        <p>Преподаватель может изменть цену курса, а также отозвать или дать своё согласие на участие в дисконтных программах ruversity.com как до размещения курса на сервере ruversity.com, так и после размещения.</p>
         <p>
             Преподаватель может размещать Обучающие материалы бесплатно.
         </p>
         <p>
-            Преподаватель получает 60% от стоимости курса.
+            Преподаватель получает 65% от стоимости курса.
         </p>
         <p>
             Деньги переводятся по реквизитам, указанным Преподавателем в своем личном кабинете, в течение 10 банковских дней с
