--- a/templates/mycourses/subject_purchased.html
+++ b/templates/mycourses/subject_purchased.html
@@ -117,7 +117,7 @@
                         <div class="row">
                             <div class="col-9">
                        
-                            <a href="{% url 'video' subject.id lecture.id %}" target="_blank" id='a_id'>{{lecture.title}} {{lecture.length}} мин. </a>
+                            <a href="{% url 'video' subject.id lecture.id %}" target="_blank" id='a_id'>{{lecture.title}} {{lecture.length_1}} </a>
                             </div>
 
                             <div class="col-3">
