--- a/templates/workshop/edit_section.html
+++ b/templates/workshop/edit_section.html
@@ -255,7 +255,7 @@
 
     <div class="row mt-2 collection">
         <div class="col-8">
-        <strong>{{lecture.enumerator}}. УИН: {{lecture.id}}; Название: {{lecture.title}};. Дл.: {{lecture.length}} мин. Размер:  {{lecture.size_mb}} Mb</strong>
+        <strong>{{lecture.enumerator}}. УИН: {{lecture.id}}; Название: {{lecture.title}};. Дл.: {{lecture.length_1}} Размер:  {{lecture.size_mb}} Mb</strong>
         </div>
         <div class="col-2">
             <input type="button" value="Редактировать" id="lecture_title" class="btn btn-sm btn-block btn-outline-dark">
