--- a/templates/subject_page.html
+++ b/templates/subject_page.html
@@ -76,7 +76,7 @@
     
         <div class="row">      
           
-            <div class="col"><strong>Длительность: </strong>{{ subject.length_1}}</div>
+            <div class="col"><strong>Длительность: </strong>{{ subject_hours}}:{{subject_min}}:{{subject_sec}}</div>
   
         </div>
         <div class="row">
