edited subject page

--- a/templates/subject_page.html
+++ b/templates/subject_page.html
@@ -76,7 +76,7 @@
     
         <div class="row">      
           
-            <div class="col"><strong>Длительность: </strong>{{ subject_hours}}:{{subject_min}}:{{subject_sec}}</div>
+            <div class="col"><strong>Длительность: </strong>{{ subject_length_hours}}:{{subject_length_min}}:{{subject_length_sec}}</div>
   
         </div>
         <div class="row">
