--- a/templates/subject_page.html
+++ b/templates/subject_page.html
@@ -155,8 +155,7 @@
         </div>
          
     {% for section in sections %}
-        <div class="section_1">
-            <h5 data-bs-toggle="collapse" data-bs-target='#section{{section.id}}'>Раздел {{section.enumerator}}: {{section.title}}. Длительность: {{section.length_1}}</h5>
+        <div class="section_1" data-bs-toggle="collapse" data-bs-target='#section{{section.id}}'> <h5> Раздел {{section.enumerator}}: {{section.title}}. Длительность: {{section.length_1}}</h5>
         </div>
 
                 {% for lecture in lectures %}
