--- a/templates/mycourses/subject_purchased.html
+++ b/templates/mycourses/subject_purchased.html
@@ -15,7 +15,7 @@
 <div class="row">
 <div class="card_subject">
 <div class="card">
-            <div class="card-header">
+            <div class="card-header" style='min-height:5rem'>
                 <h4>{{subject.title}}</h4>
             </div>
         
