--- a/templates/workshop/edit_subject.html
+++ b/templates/workshop/edit_subject.html
@@ -117,8 +117,8 @@
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="title"><strong>Редактировать название курса</strong></label>
-                    <input type="text" class='form-control' id="title" name="title" maxlength='50'
-                        placeholder='Название курса'>
+                    <input type="text" class='form-control' id="title" name="title" maxlength='60'
+                        placeholder='Название курса. Не более 60 символов.'>
                 </div>
                 <div class="form-group">
                     <label for="language"><strong>Редактировать язык курса</strong></label>
