--- a/templates/subject_page.html
+++ b/templates/subject_page.html
@@ -164,7 +164,7 @@
                     {% if lecture.free == False %}
                     <li class="list-group-item">{{lecture.title}} {{lecture.length_1}}</li>
                         {% for item in lecture.additionalmaterialfile_set.all%}
-                        {{item.additional_file}}
+                        <a class="nav-link" href="{{ item.additional_file.url }}" download>Ссылка на файл</a>
                         {% endfor %}
                         {% for item in lecture.additionalmateriallink_set.all%}
                         {{item.url_link}}
