--- a/templates/workshop/edit_section.html
+++ b/templates/workshop/edit_section.html
@@ -479,15 +479,15 @@
 
         for (let i = 0; i < buttons.length; i++) {
             buttons[i].addEventListener('click', e => {
-                //lectures[i].classList.remove('openModal')
-                location.reload();
+                lectures[i].classList.remove('openModal')
+                //location.reload();
             })
         }
 
          for (let i = 0; i < close_buttons.length; i++) {
                 close_buttons[i].addEventListener('click', e => {
-                    //lectures[i].classList.remove('openModal')
-                    location.reload();
+                    lectures[i].classList.remove('openModal')
+                    //location.reload();
                 })
             }
 
