--- a/templates/contacts/termsofuse.html
+++ b/templates/contacts/termsofuse.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h3 class='text-center m-2'>УСЛОВИЯ ИСПОЛЬЗОВАНИЯ СЕРВИСА (ред 1 от 30.08.2022).</h3><br>
+            <h3 class='text-center m-2'>УСЛОВИЯ ИСПОЛЬЗОВАНИЯ СЕРВИСА (ред 3 от 08.11.2022).</h3><br>
 
             <h5>1. Общие положения</h5>
             <p>Данные Условия являются договором присоединения. Факт регистрации учетной записи Пользователя на портале ruversity.com означает согласие Пользователя с данными Условиями и присоединение к данному договору.</p>
@@ -45,10 +45,13 @@
             Не является нарушением допустимое добросовестное использование торговго знака в случае, если он используется для обозначения предмета Обучающих материалов.
             </p>
                
-            <p>Преподаватель может удалить свою учетную запись в любое время. Однако, Обучающие материалы, созданные им, останутся доступными Слуашателям, которые приобрели данные Обучающие материалы ранее.
+            <p>Преподаватель может удалить свою учетную запись в любое время. Однако, Обучающие материалы, созданные им, останутся
+            доступными Слушателям, которые приобрели данные Обучающие материалы ранее. После удаления Преподавателем своей
+            учетной записи ruversity.com утрачивает право продавать Обучающие материалы, созданные данным Преподавателем, новым
+            пользователям за исключеним случаев оговариваемых в договоре на платное размещение.
             </p>
             <p>
-            После загрузки Обучающих материалов на сервер Преподаватель утрачивает доступ к ним. Все изменения и дополнения в Обучающие материалы вносятся Преподавателем по предварительно письменной заявке, направленной на support@ruversity.com.
+            После загрузки Обучающих материалов на сервер Преподаватель утрачивает доступ к ним. Все изменения и дополнения в Обучающие материалы вносятся Преподавателем по предварительной письменной заявке, направленной на support@ruversity.com.
             </p>
             <h5>3. Слушатели</h5>
             <p>Ruversity.com предоставляет Слушателям пожизненный доступ к Обучающим материалам на условиях, определяемых совместно Преподавателем, разместившим данный Обучающий материал, и администрацией ruversity.com.
@@ -117,7 +120,7 @@
                 Пользователи самостоятельно следят за изменениями, вносимыми в данные условия. В случае несогласия с данными условиями Пользователю следует самостоятельно удалить свою учетную запись на ruversity.com. 
             </p>
             <p>
-                Данная редакция условий вступает в действие 30.08.2022.
+                Данная редакция условий вступает в действие 08.11.2022.
             </p>
            
           
