--- a/templates/workshop/agreement.html
+++ b/templates/workshop/agreement.html
@@ -5,7 +5,7 @@
 <div class="container">
 <div class="row">
     <div class="col">
-        <h3 class='text-center m-2'>УСЛОВИЯ ИСПОЛЬЗОВАНИЯ СЕРВИСА (ред 2 от 27.10.2022).</h3><br>
+        <h3 class='text-center m-2'>УСЛОВИЯ ИСПОЛЬЗОВАНИЯ СЕРВИСА (ред 3 от 08.11.2022).</h3><br>
         
         <h5>1. Общие положения</h5>
         <p>
@@ -66,11 +66,13 @@
         </p>
         
         <p>Преподаватель может удалить свою учетную запись в любое время. Однако, Обучающие материалы, созданные им, останутся
-            доступными Слуашателям, которые приобрели данные Обучающие материалы ранее.
+            доступными Слушателям, которые приобрели данные Обучающие материалы ранее. После удаления Преподавателем своей
+            учетной записи ruversity.com утрачивает право продавать Обучающие материалы, созданные данным Преподавателем, новым
+            пользователям за исключеним случаев оговариваемых в договоре на платное размещение.
         </p>
         <p>
             После загрузки Обучающих материалов на сервер Преподаватель утрачивает доступ к ним. Все изменения и дополнения в
-            Обучающие материалы вносятся Преподавателем по предварительно письменной заявке, направленной на
+            Обучающие материалы вносятся Преподавателем по предварительной письменной заявке, направленной на
             79200711112@yandex.ru
         </p>
         <h5>3. Слушатели</h5>
@@ -158,7 +160,7 @@
             условиями пользователю следует удалить свою учетную запись на ruversity.com
         </p>
         <p>
-            Данная редакция условий вступает в действие 27.10.2022.
+            Данная редакция условий вступает в действие 08.11.2022.
         </p>
 </div>
 
