--- a/templates/contacts/termsofuse.html
+++ b/templates/contacts/termsofuse.html
@@ -48,7 +48,7 @@
             <p>Преподаватель может удалить свою учетную запись в любое время. Однако, Обучающие материалы, созданные им, останутся
             доступными Слушателям, которые приобрели данные Обучающие материалы ранее. После удаления Преподавателем своей
             учетной записи ruversity.com утрачивает право продавать Обучающие материалы, созданные данным Преподавателем, новым
-            пользователям за исключеним случаев оговариваемых в договоре на платное размещение.
+            пользователям за исключеним случаев, оговариваемых в договоре на платное размещение.
             </p>
             <p>
             После загрузки Обучающих материалов на сервер Преподаватель утрачивает доступ к ним. Все изменения и дополнения в Обучающие материалы вносятся Преподавателем по предварительной письменной заявке, направленной на support@ruversity.com.
